Bug 1786191 - [comm-esr102] Use utf-16 character literals when calling ReplaceChar. r=benc a=wsmwk

If passing single-byte string to be compared using a utf16 string it won't work, breaks e.g. for half-width katakana.

Differential Revision: https://phabricator.services.mozilla.com/D155193