mailnews/base/src/nsMsgUtils.cpp
@@ -284,7 +284,7 @@ int32_t MsgFindCharInSet(const nsCString& aString, const char* aChars,
   return aString.FindCharInSet(aChars, aOffset);
 }
 
-int32_t MsgFindCharInSet(const nsString& aString, const char* aChars,
+int32_t MsgFindCharInSet(const nsString& aString, const char16_t* aChars,
                          uint32_t aOffset) {
   return aString.FindCharInSet(aChars, aOffset);
 }
@@ -360,8 +360,8 @@ nsresult NS_MsgHashIfNecessary(nsAutoCString& name) {
 nsresult NS_MsgHashIfNecessary(nsAutoString& name) {
   if (name.IsEmpty()) return NS_OK;  // Nothing to do.
   int32_t illegalCharacterIndex = MsgFindCharInSet(
-      name, FILE_PATH_SEPARATOR FILE_ILLEGAL_CHARACTERS ILLEGAL_FOLDER_CHARS,
-      0);
+      name,
+      u"" FILE_PATH_SEPARATOR FILE_ILLEGAL_CHARACTERS ILLEGAL_FOLDER_CHARS, 0);
 
   // Need to check the first ('.') and last ('.', '~' and ' ') char
   if (illegalCharacterIndex == -1) {
